--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -19,6 +19,11 @@
           line-height: 0.9;
           font-family: 'El Messiri', sans-serif;
         }
+        .desc{
+          span{
+            font-weight: bold;
+          }
+        }
         form{
           margin-top: 20px;
           display: flex;
