--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -5,14 +5,14 @@
   position: relative;
   display: flex;
   margin: 30px auto 0;
-  padding: 30px;
-  height: 55vh;
-  min-height: 470px;
+  padding: 50px;
+  height: 550px;
+  box-sizing: border-box;
   background-color: #ffffff80;
   .mainImg {
     position: relative;
     width: 30vw;
-    height: 49vh;
+    height: 100%;
     overflow: hidden;
     background-color: #f6f6f6;
 
@@ -97,7 +97,7 @@
 @media screen and (max-width: 768px) {
   .blogWrap {
     flex-direction: column;
-    padding: 30px;
+    padding: 30px 15px;
     min-height: 70vh;
     .mainImg {
       width: 100%;
