--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -60,6 +60,7 @@
             }
             .desc{
               margin-top: 20px;
+              width: 80%;
             }
           }
           .right{
