tablet 사이즈 맞춤 & img변경

--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -27,6 +27,11 @@
   // }
 }
 
+@media screen and (max-width: 1024px) {
+  .subject{
+    padding-left: 0;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .subject{
