--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -67,10 +67,10 @@
       overflow: hidden;
       .thumb{
         display: block;
-        width: 7.8vw;
+        width: 100%;
         height: 120px;
         overflow: hidden;
-        border-radius: 5px;
+        border-radius: 3px;
         img {
           @include image-cover();
           object-position: center;
@@ -98,7 +98,8 @@
   .blogWrap {
     flex-direction: column;
     padding: 30px 15px;
-    min-height: 70vh;
+    height: 50vh;
+    min-height: 470px;
     .mainImg {
       width: 100%;
       height: 100%;
@@ -112,12 +113,23 @@
       }
       .textBox{
         margin-top: 20px;
+        min-height: 100%;
         .title{
           font-size: 1.5rem;
         }
         p{
           width: 100%;
           font-size: 1rem;
+          height: 120px;
+          overflow-y: scroll;
+          -ms-overflow-style:auto ; /* IE and Edge */
+          scrollbar-width: auto; /* Firefox */
+          &::-webkit-scrollbar {
+            width: 3px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #a9a9a9;
+        }
         }
       }
       .imgLists {
@@ -130,7 +142,6 @@
         .thumb{
           display: block;
           width: 100%;
-          height: 20vh;
         }
       }
     }
