--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -46,6 +46,14 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .footer{
+    .container{
+      max-width: 100%;
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .footer{
   padding: 20px 15px;
