--- a/src/components/ImageEffect/ItemFadeEffect/ItemFadeEffect.module.scss
+++ b/src/components/ImageEffect/ItemFadeEffect/ItemFadeEffect.module.scss
@@ -68,7 +68,7 @@ $image2Width: 133.333333%;
       z-index: 2;
       opacity: 1;
       letter-spacing: -3px;
-      transform: translateY(-50%);
+      transform: translate3d(0, -35%, 0);
       opacity: 0;
       transition: all 0.25s ease-in-out;
       .title {
@@ -130,7 +130,7 @@ $image2Width: 133.333333%;
         left: -87.5%
       }
       .square + .textBox, .square .textBox{
-        left: -69.5%;
+        left: -66%;
       }
       // .vertical + .textBox, .vertical .textBox{
       //   left: -69.222%;
@@ -190,6 +190,80 @@ $image2Width: 133.333333%;
   margin-top: 108%;
   transform: translateX(-25%);
   width: $image2Width;
+}
+
+@media screen and (max-width: 1024px) {
+  .imageFade {
+    flex-direction: column;
+    .contLeft, .contRight {
+      width: 100%;
+      align-items: center;
+      .imageBox{
+        margin-top: 0;
+        width:85%;
+        .horizon + .textBox, .horizon .textBox{
+          left: 0;
+        }
+        &:hover {
+          .item{
+            &::before {
+              background: #00000040;
+            }
+          }
+        }
+      }
+      .textBox{
+        width: 100%;
+        left: 0;
+        letter-spacing: 0;
+     
+        .title, .tag, .smText{
+          color: #fff;
+        }
+        .title {
+          margin-top: 5px;
+          text-align: center;
+          font-size: 5rem;
+        }
+        .tag{
+          font-size: 2rem;
+          letter-spacing: 1.5px;
+        }
+        .smText{
+          font-size: 1rem ;
+        }
+      }
+    }
+    .contLeft{
+      .imageBox{
+        .horizon + .textBox, .horizon .textBox{
+          left: 0;
+        }
+        .vertical + .textBox, .vertical .textBox{
+          left: 0;
+        }
+      }
+    }
+    .contRight{
+      .imageBox{
+        .horizon + .textBox, .horizon .textBox{
+          left: 0%
+        }
+        .square + .textBox, .square .textBox{
+          left: 0%;
+        }
+      }
+    }
+  }
+
+  
+  .image4{
+    transform: translateX(0);
+  }
+  .image2{
+    width: 100%;
+    transform: translateX(0);
+  }
 }
 
 @media screen and (max-width: 768px) {
