--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -29,6 +29,7 @@
       font-weight: bold;
       border-bottom: 2px solid #59db92;
       background-color: #bc9b8f;
+      box-shadow: 0px 4px 30px 0px #00000080;
     }
     .scrollWrap{
       overflow-y: auto;
@@ -46,9 +47,8 @@
         }
       
         .contentWrap {
-          padding: 0 50px;
+          padding: 100px 50px;
           display: flex;
-          margin-top: 100px;
           .left{
             width: 65%;
             .subTitle{
@@ -174,6 +174,9 @@
           .left{            
             margin-top: 30px;
             width: 100%;
+            .subTitle{
+              font-size: 4rem;
+            }
           }
         }
       }
