--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -66,6 +66,30 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+  .contact{
+    .container{
+      padding: 0 20px;
+      max-width: 100%;
+      .content{
+        .leftCont{
+          padding: 0 10% 0 0;
+          form{
+            .formText{
+              padding: 12px 18px;
+              font-size: 1rem;
+            }
+            .formTextarea{
+              padding: 12px 18px;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .contact{
     .container{
