--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -1,5 +1,29 @@
 @import '../../assets/scss/common/mixin';
 
+@keyframes flipdown {
+  0% {
+    opacity: 0;
+    transform-origin: top center;
+    transform: rotateX(-90deg);
+  }
+  5% {
+    opacity: 1;
+  }
+  80% {
+    transform: rotateX(8deg);
+  }
+  83% {
+    transform: rotateX(6deg);
+  }
+  92% {
+    transform: rotateX(-3deg);
+  }
+  100% {
+    transform-origin: top center;
+    transform: rotateX(0deg);
+  }
+}
+
 .main{
   .content{
     position: relative;
@@ -115,6 +139,25 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .main{
+    .container{
+      padding: 0 20px;
+      max-width: 100%;
+      .imageEffectBox{
+        margin: 300px 0 150px;
+        h3{
+        margin-bottom: 120px;
+        padding-left: 160px;
+        font-size: 5rem;
+          &::before{
+            left: 90px;
+          }
+        }
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 768px) {
   .main{
@@ -174,26 +217,3 @@
 }
 
 
-@keyframes flipdown {
-  0% {
-    opacity: 0;
-    transform-origin: top center;
-    transform: rotateX(-90deg);
-  }
-  5% {
-    opacity: 1;
-  }
-  80% {
-    transform: rotateX(8deg);
-  }
-  83% {
-    transform: rotateX(6deg);
-  }
-  92% {
-    transform: rotateX(-3deg);
-  }
-  100% {
-    transform-origin: top center;
-    transform: rotateX(0deg);
-  }
-}
