--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -128,6 +128,7 @@ header{
       a{
         display: block;
         font-size: 4rem;
+        font-family: 'Abril Fatface', cursive;
       }
     }
   }
