--- a/src/pages/ToyProject/ToyProject.module.scss
+++ b/src/pages/ToyProject/ToyProject.module.scss
@@ -228,6 +228,13 @@
           .itemContent {
             .itemImage {
               width: 70%;
+              &::before{
+               display: none;
+              }
+              img{
+                opacity: 1;
+                filter: blur(0);
+              }
             }
             .itemBody {
               left: 15%;
@@ -236,6 +243,81 @@
               }
               .desc{
               font-size: 1rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .toyProject{
+    section{
+      .container{
+        padding: 200px 20px;
+      }
+      &.intro{
+        .container{
+          padding: 100px 20px 100px;
+          .title{
+            margin-top: 40px;
+            font-size: 2.2rem;
+            letter-spacing: -1px;
+          }
+          p{
+            font-size: 1rem;
+            line-height: 2;
+            word-break: keep-all;
+            &:first-of-type{
+              margin-top: 30px;
+            }
+          }
+        }
+      }
+      &.extra{
+        .container{
+          .title{
+            font-size: 3rem;
+            // &:before, &:after{
+            //   opacity: 0;
+            //   animation: ani 5s infinite;
+            // }
+          }
+          p{
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+    .panels {
+      .panelPath{
+         .panel{
+          padding: 130px 15px 10px;
+          .itemContent {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            max-width: 100vw;
+            .itemImage {
+              width: 100%;
+            }
+            .itemBody {
+              position: absolute;
+              left: 20px;
+              bottom: 0;
+              width: 90%;
+              height: 40%;
+              .title {
+                font-size: 2rem;
+              }
+              .desc{
+                font-size: 1rem;
               }
             }
           }
