경로 셋팅 후, 컴포넌트 파일 전체적으로 경로 수정

--- a/src/components/ImageEffect/ImgScaleEffect/ImgScaleEffect.module.scss
+++ b/src/components/ImageEffect/ImgScaleEffect/ImgScaleEffect.module.scss
@@ -1,5 +1,5 @@
-  @import '../../../assets/scss/common/mixin';
-  @import '../../../assets/scss/common/var';
+  @import 'assets/scss/common/mixin';
+  @import 'assets/scss/common/var';
 
   $itemsNo: 4;
   $delay: 0.4;
