--- a/src/pages/ToyProject/ToyProject.module.scss
+++ b/src/pages/ToyProject/ToyProject.module.scss
@@ -1,6 +1,6 @@
 
-@import '../../assets/scss/common/mixin';
-@import '../../assets/scss/common/var';
+@import 'assets/scss/common/mixin';
+@import 'assets/scss/common/var';
 
 
 .toyProject{
