--- a/src/components/FlowText/FlowText.module.scss
+++ b/src/components/FlowText/FlowText.module.scss
@@ -1,5 +1,5 @@
-@import '../../assets/scss/common/var';
-@import '../../assets/scss/common/mixin';
+@import 'assets/scss/common/var';
+@import 'assets/scss/common/mixin';
 
 
 @keyframes marquee-r {
