--- a/src/components/ListCards/ListCards.module.scss
+++ b/src/components/ListCards/ListCards.module.scss
@@ -1,5 +1,5 @@
-@import '../../assets/scss/common/mixin';
-@import '../../assets/scss/common/var';
+@import 'assets/scss/common/mixin';
+@import 'assets/scss/common/var';
 
 .listCards{
   margin-top: 30px;
