--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -15,6 +15,7 @@
     height: 100%;
     overflow: hidden;
     background-color: #f6f6f6;
+    border: 1px solid #c7a6a629;
 
     img {
       @include image-cover();
@@ -47,7 +48,7 @@
     }
 
     .textBox {
-      margin-top: 60px;
+      margin-top: 50px;
       min-height: 300px;
       .title {
         font-size: 2rem;
@@ -55,8 +56,13 @@
       }
       p {
         margin-top: 15px;
-        width: 80%;
+        width: 100%;
         font-size: .9rem;
+        span{
+          display: block;
+          line-height: 1.6;
+          &:last-child{display: none;}
+        }
       }
     }
     .imgLists {
@@ -71,6 +77,7 @@
         height: 120px;
         overflow: hidden;
         border-radius: 3px;
+        border: 1px solid #c7a6a629;
         img {
           @include image-cover();
           object-position: center;
@@ -92,6 +99,42 @@
   }
 }
 
+@media screen and (max-width: 968px) {
+  .blogWrap {
+    flex-direction: column;
+    padding: 30px 15px;
+    height: 50vh;
+    min-height: 470px;
+    .mainImg {
+      width: 100%;
+      height: 100%;
+    }
+    .blogContent {
+      width: 100%;
+      height: auto;
+      padding: 140px 0 0;
+      .btnWrap{
+        position: relative;
+        top: 40px;
+      }
+      .textBox{
+        margin-top: 55px;
+        min-height: 250px;
+      }
+      .imgLists {
+        position: absolute;
+        top: 0;
+        display: flex;
+        padding: 0;
+        width: 100%;
+        height: 160px;
+        .thumb{
+          height: 160px;;
+        }
+      }
+    }
+  }
+}
 
 
 @media screen and (max-width: 768px) {
@@ -107,9 +150,10 @@
     .blogContent {
       width: 100%;
       height: auto;
-      padding: 20vh 0 0;
+      padding: 140px 0 0;
       .btnWrap{
         position: relative;
+        top: 0;
       }
       .textBox{
         margin-top: 20px;
@@ -120,16 +164,20 @@
         p{
           width: 100%;
           font-size: 1rem;
-          height: 120px;
+          // height: 120px;
+          height: 140px;
           overflow-y: scroll;
           -ms-overflow-style:auto ; /* IE and Edge */
           scrollbar-width: auto; /* Firefox */
           &::-webkit-scrollbar {
             width: 3px;
-        }
-        &::-webkit-scrollbar-thumb {
-            background: #a9a9a9;
-        }
+          }
+          &::-webkit-scrollbar-thumb {
+              background: #a9a9a9;
+          }
+          span{
+            font-size: .8rem;
+          }
         }
       }
       .imgLists {
@@ -146,5 +194,4 @@
       }
     }
   }
- 
 }
