--- a/src/components/Instagram/Instagram.module.scss
+++ b/src/components/Instagram/Instagram.module.scss
@@ -37,8 +37,6 @@
       .ux{
         position: relative;
         display: flex;
-    
-     
       }
     }
     .text{
@@ -48,11 +46,11 @@
       &:before{
         content: '';
         position: absolute;
-        top: -3px;
+        top: -2px;
         left: 0;
-        width: 15px;
+        width: 13px;
         height: 3px;
-        background: #d6d6d6;
+        background: #f1b7b7;
       }
     }
   }
