--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -18,18 +18,32 @@
     overflow-y: auto;
     transition: 2s ease-in-out;
     background-color: #bc9b8f;
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #9b8077;
+      border-radius: 14px;
+      
+      border: 2px solid transparent;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: #e3ddda;
+      border-radius: 10px;
+    }
     h3.toptitle {
       position: sticky;
       top: 0;
       left: 0;
+      z-index: 10;
       padding: 0 35px;
       height: 120px;
       line-height: 120px;
       font-size: 2rem;
       font-weight: bold;
-      border-bottom: 2px solid #59db92;
+      border-bottom: 2px solid #e6b294;
       background-color: #bc9b8f;
-      box-shadow: 0px 4px 30px 0px #00000080;
+      box-shadow: 0px 2px 20px 0px #00000080;
     }
     .scrollWrap{
       overflow-y: auto;
@@ -37,69 +51,98 @@
           .thumb {
             display: block;
             width: 100%;
-            height: 320px;
+            height: clamp(350px, 350px, 380px);
             overflow: hidden;
-      
             img {
               @include image-cover();
             }
           }
-        }
-      
-        .contentWrap {
-          padding: 100px 50px;
-          display: flex;
-          .left{
-            width: 65%;
-            .subTitle{
-              display: inline-block;
-              font-size: 4.5rem;
-              line-height: 1;
-              letter-spacing: 2px;
-              font-family: 'Abril Fatface', cursive;
-            }
-            .desc{
-              margin-top: 20px;
-              width: 80%;
+      }
+      .contentWrap {
+        padding: 100px 50px;
+        display: flex;
+        flex-wrap: wrap;
+        .left{
+          width: 65%;
+          .subTitle{
+            display: inline-block;
+            font-size: 6rem;
+            line-height: 1;
+            letter-spacing: 2px;
+            font-family: 'Abril Fatface', cursive;
+          }
+          .desc{
+            margin-top: 35px;
+            width: 86%;
+            font-size: 1rem;
+            line-height: 1.6;
+            span{
+              display: block;
+              &:last-child{
+                display: none;
+              }
             }
           }
-          .right{
-            width: 35%;
-            .log{
-              padding-left: 15%;
-              dt{
-                position: relative;
-                font-size: 1.3rem;
-                line-height: 1;
-                font-family: 'El Messiri', sans-serif;
-                font-weight: bold;
-                &:before{
-                  content: '';
-                  position: absolute;
-                  top: -2px;
-                  left: -6px;
-                  width: 3px;
-                  height: 7px;
-                  border-radius: 8px;
-                  background-color: #fff;
+        }
+        .right{
+          width: 35%;
+          .log{
+            padding-top: 30px;
+            padding-left: 15%;
+            dt{
+              position: relative;
+              font-size: 1.3rem;
+              line-height: 1;
+              font-family: 'El Messiri', sans-serif;
+              font-weight: bold;
+              &:before{
+                content: '';
+                position: absolute;
+                top: -2px;
+                left: -6px;
+                width: 3px;
+                height: 7px;
+                border-radius: 8px;
+                background-color: #fff;
+              }
+            }
+            dd {
+              margin-bottom: 25px;
+              padding-left: 5px;
+              font-family: 'Noto Sans KR', sans-serif;
+              word-break: break-word;
+              &.tag{
+                padding-top: 10px;
+                i{
+                  margin-right: 5px;
                 }
               }
-              dd{
-                margin-bottom: 20px;
-                padding-left: 10px;
-                font-family: 'Noto Sans KR', sans-serif;
-                word-break: break-word;
-              }
             }
           }
         }
+        .projectImages{
+          margin-top: 80px;
+          padding-top: 15px;
+          width: 100%;
+          height: 100%;
+          overflow: hidden;
+          border-top: 2px solid #fff;
+          img{
+            margin-top: 45px;
+            @include image-cover();
+            &:first-child{
+                margin-top: 0;
+            } 
+          }
+        }
+      }
     }
-   
   }
   .btnClose{
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 3%;
+    z-index: 11;
     width: 30px;
     height: 30px;
     text-align: center;
@@ -150,6 +193,22 @@
   }
 }
 
+
+@media screen and (max-width: 968px) {
+  .popupLayer{
+    .popupContainer{
+      .scrollWrap{
+        .contentWrap {
+          .left{
+            .subTitle{
+              font-size: 5rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: 768px) {
   .popupLayer{
     .popupContainer{
@@ -164,22 +223,36 @@
         .contentWrap{
           margin: 60px 0 30px;
           padding: 0 20px;
-          flex-direction: column-reverse;
           .right{
             width: 100%;
             .log{
-              padding-left: 20px;
+              padding-left: 10px;
+              dd {
+                &.tag{
+                  padding-left: 0;
+                  padding-top: 8px;
+                }
+              }
             }
           }
           .left{            
             margin-top: 30px;
             width: 100%;
             .subTitle{
-              font-size: 4rem;
+              font-size: 3.4rem;
             }
+            .desc{
+              width: 100%;
+            }
+          }
+          .projectImages{
+            margin-top: 30px;
           }
         }
       }
     }
+  }
+  .btnClose{
+    right: 4%;
   }
 }
