--- a/src/pages/ToyProject/ToyProject.module.scss
+++ b/src/pages/ToyProject/ToyProject.module.scss
@@ -147,7 +147,7 @@
 
           .itemBody {
             position: absolute;
-            left: 20%;
+            left: 7%;
             top: 50%;
             width: 43%;
             color: #fff;
@@ -255,6 +255,54 @@
 }
 
 
+@media screen and (max-width: 968px) {
+  .toyProject{
+    section{
+      .container{
+        padding: 200px 20px;
+      }
+    }
+    .panels {
+      .panelPath{
+         .panel{
+          padding: 120px 15px 10px;
+          .itemContent {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            max-width: 100vw;
+            .itemImage {
+              width: 100%;
+              height: 400px;
+              overflow: hidden;
+              img{
+                object-fit: contain;
+              }
+            }
+            .itemBody {
+              position: absolute;
+              top: 58%;
+              left: 50%;
+              width: 70%;
+              transform: translateX(-50%);
+              .title {
+                font-size: 3.3rem;
+              }
+              .desc{
+                margin-top: 20px;
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .toyProject{
     section{
@@ -283,10 +331,6 @@
         .container{
           .title{
             font-size: 3rem;
-            // &:before, &:after{
-            //   opacity: 0;
-            //   animation: ani 5s infinite;
-            // }
           }
           p{
             font-size: 1.2rem;
@@ -297,7 +341,7 @@
     .panels {
       .panelPath{
          .panel{
-          padding: 130px 15px 10px;
+          padding: 100px 15px 10px;
           .itemContent {
             position: relative;
             display: flex;
@@ -308,19 +352,25 @@
             max-width: 100vw;
             .itemImage {
               width: 100%;
+              height: 250px;
+              overflow: hidden;
+              img{
+                object-fit: contain;
+              }
             }
             .itemBody {
               position: absolute;
+              top: 67%;
               left: 20px;
               bottom: 0;
               width: 90%;
               height: 40%;
-              
+              transform: translateX(0);
               .title {
-                font-size: 2rem;
+                font-size: 1.5rem;
               }
               .desc{
-                font-size: 1rem;
+                font-size: .9rem;
               }
             }
           }
