--- a/src/components/Popup/popup.module.scss
+++ b/src/components/Popup/popup.module.scss
@@ -3,28 +3,29 @@
 
 .popupLayer{
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  display: flex;
-  justify-content: right;
   width: 100%;
   height: 100%;
-  background-color: #00000070;
-  .popupContainer{
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  .popupContainer{ 
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
     width: 80%;
+    width: clamp(80%, 80%, 1500px);
     height: 100%;
     color: #fff;
     overflow-y: auto;
-    transition: 2s ease-in-out;
     background-color: #bc9b8f;
+    transition: 2s ease-in-out;
     &::-webkit-scrollbar {
       width: 10px;
     }
     &::-webkit-scrollbar-thumb {
       background-color: #9b8077;
       border-radius: 14px;
-      
       border: 2px solid transparent;
     }
     &::-webkit-scrollbar-track {
@@ -121,12 +122,12 @@
           }
         }
         .projectImages{
-          margin-top: 80px;
-          padding-top: 15px;
+          margin: 80px auto 0;
+          padding: 15px 15% 0;
           width: 100%;
           height: 100%;
           overflow: hidden;
-          border-top: 2px solid #fff;
+          border-top: 2px solid #ffffff80;
           img{
             margin-top: 45px;
             @include image-cover();
@@ -191,6 +192,17 @@
         cursor: pointer;
       }
   }
+  .dimme{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: #00000080;
+  }
 }
 
 
@@ -203,6 +215,9 @@
             .subTitle{
               font-size: 5rem;
             }
+          }
+          .projectImages{
+            padding: 15px 0%;
           }
         }
       }
