--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -103,31 +103,38 @@
   .blogWrap {
     flex-direction: column;
     padding: 30px 15px;
-    height: 50vh;
+    height: 100%;
     min-height: 470px;
     .mainImg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 10px;
       width: 100%;
-      height: 100%;
+      height: 220px;
+      overflow: hidden;
     }
     .blogContent {
+      display: flex;
+      flex-direction: column-reverse;
       width: 100%;
       height: auto;
       padding: 140px 0 0;
       .btnWrap{
         position: relative;
-        top: 40px;
+        top: 0;
       }
       .textBox{
-        margin-top: 55px;
+        margin-top: 75px;
         min-height: 250px;
       }
       .imgLists {
-        position: absolute;
-        top: 0;
+        position: relative;
+        top: 60px;
         display: flex;
         padding: 0;
         width: 100%;
-        height: 160px;
+        height: 164px;
         .thumb{
           height: 160px;;
         }
@@ -141,31 +148,37 @@
   .blogWrap {
     flex-direction: column;
     padding: 30px 15px;
-    height: 50vh;
-    min-height: 470px;
+    height: 100%;
     .mainImg {
       width: 100%;
-      height: 100%;
+      height: 150px;
+      overflow: hidden;
     }
     .blogContent {
+      top: 115px;
+      padding: 126px 0 0;
       width: 100%;
       height: auto;
-      padding: 140px 0 0;
       .btnWrap{
-        position: relative;
-        top: 0;
+        position: absolute;
+        top: 85px;
+        width: 100%;
+        button, a{
+          width: 50%;
+        }
       }
       .textBox{
-        margin-top: 20px;
+        margin-top: 15px;
         min-height: 100%;
         .title{
-          font-size: 1.5rem;
+          font-size: 1.3rem;
+          line-height: 1.3;
+          letter-spacing: -1px;
         }
         p{
           width: 100%;
           font-size: 1rem;
-          // height: 120px;
-          height: 140px;
+          height: 100px;
           overflow-y: scroll;
           -ms-overflow-style:auto ; /* IE and Edge */
           scrollbar-width: auto; /* Firefox */
@@ -186,10 +199,11 @@
         display: flex;
         padding: 0;
         width: 100%;
-        height: 120px;
+        height: 80px;
         .thumb{
           display: block;
           width: 100%;
+          height: 80px;
         }
       }
     }
